sg-890 - fix spacing between service sections

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-services.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-services.scss
@@ -41,4 +41,7 @@
   .sfgov-dept-services-section-title {
     @include fs-big-description;
   }
+  .sfgov-services-section {
+    margin-bottom: 60px;
+  }
 }
